<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- RTL order: rightmost item first -->
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_nav"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_wallet_nav"
        android:title="@string/nav_wallet" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_nav"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/servicesFragment"
        android:icon="@drawable/ic_services_nav"
        android:title="@string/nav_services" />

    <item
        android:id="@+id/investmentFragment"
        android:icon="@drawable/ic_investment_nav"
        android:title="@string/nav_investment" />

</menu>
