<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mineobank.app.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/walletFragment"
        android:name="com.mineobank.app.ui.wallet.WalletFragment"
        android:label="@string/nav_wallet" />

    <fragment
        android:id="@+id/servicesFragment"
        android:name="com.mineobank.app.ui.services.ServicesFragment"
        android:label="@string/nav_services" />

    <fragment
        android:id="@+id/investmentFragment"
        android:name="com.mineobank.app.ui.investment.InvestmentFragment"
        android:label="@string/nav_investment" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mineobank.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
